refactor(app/oauth): полностью переписал авторизацию и работу с клиентами
