# entity/request/oauth_client.go
@@ -1,0 +1,7 @@
+package request
+
+// CreateOAuthClient contain incoming data with user credentials
+type CreateOAuthClient struct {
+	Name     string `json:"name"`
+	Redirect string `json:"redirect"`
+}
